fix: Fix workflow*4 * 所以这Github Action运行目录究竟在哪啊(恼)
Signed-off-by: MATRIX-feather <midnightcarnival@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
       #无法将框架克隆到/home/runner/work/osu以外，用此办法暂时规避
       - name: 移动项目
         run: |
+          ls
+          echo "$pwd"
           mkdir mfosu
           mv ./* mfosu || true
           mv ./.* mfosu
