fix: 尝试修复Android构建 misc: 启用对osu.Desktop的构建
Signed-off-by: MATRIX-feather <midnightcarnival@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,9 @@ jobs:
           ls
           echo "pwd: $PWD"
 
-      #- name: 构建
-      #  run: dotnet build osu.Desktop -c Release
+      - name: 构建
+        working-directory: ./mfosu
+        run: dotnet build osu.Desktop -c Release
 
   #From .github/workflows_/ci.yml
   build-android:
