--- a/osu.Android.props
+++ b/osu.Android.props
@@ -51,6 +51,7 @@
     <Reference Include="Java.Interop" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ppy.osu.Framework" Version="1.0.0.0" />
     <PackageReference Include="ppy.osu.Game.Resources" Version="2021.1112.0" />
   </ItemGroup>
   <ItemGroup Label="Transitive Dependencies">
