--- a/osu.iOS.props
+++ b/osu.iOS.props
@@ -63,7 +63,7 @@
     <PackageReference Include="ppy.osu.Framework.iOS" Version="2022.204.0" />
     <PackageReference Include="ppy.osu.Game.Resources" Version="2022.204.0" />
   </ItemGroup>
-  <!-- See https://github.com/dotnet/runtime/issues/35988 (can be removed after Xamarin uses net5.0 / net6.0) -->
+  <!-- See https://github.com/dotnet/runtime/issues/35988 (can be removed after Xamarin uses net6.0) -->
   <PropertyGroup>
     <NoWarn>$(NoWarn);NU1605</NoWarn>
   </PropertyGroup>
