--- a/.github/ISSUE_TEMPLATE/bug-issue.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue.yml
@@ -44,25 +44,25 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## Logs attachments
+        ## Logs
 
-        Logs are necessary to further investigate this bug. They are reset every new game session, so you need to ensure the logs are preserved by not starting/restarting osu! after encountering the bug.
+        Attaching log files is required for every reported bug. Instructions how to find the log files are listed below.
 
-        In the case this isn't a "Crash to Desktop" report, to retrieve logs:
+        If the game has not yet been closed since you found the bug:
           1. Head on to game settings and click on "Open osu! folder"
           2. Then open the `logs` folder located there
 
-        Otherwise, logs can *only* be retrieved via file explorer, as running the game will reset them.
+        If the game crashed or has been closed since you found the bug, **do not** restart the game to retrieve the logs as they will reset. You must find them using the file explorer.
 
-        Logs are, by default, located at:
+        By default logs can be found in:
           - `%AppData%/osu/logs` *(on Windows),*
           - `~/.local/share/osu/logs` *(on Linux & macOS).*
           - `Android/data/sh.ppy.osulazer/files/logs` *(on Android)*,
           - on iOS they can be obtained by connecting your device to your desktop and copying the `logs` directory from the app's own document storage using iTunes. (https://support.apple.com/en-us/HT201301#copy-to-computer)
 
-        If you have relocated your game folder, head into that location and open the `logs` folder.
+        However, if you have selected a custom location for the game files via settings, you must find that custom folder and open the `logs` folder there.
 
-        Finally, select all log files and drag them into the "Logs" box below.
+        After locating the `logs` folder, select all log files inside and drag them into the "Logs" box below.
 
   - type: textarea
     attributes:
