--- a/.github/ISSUE_TEMPLATE/bug-issue.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue.yml
@@ -46,21 +46,21 @@ body:
       value: |
         ## Logs
 
-        Attaching log files is required for every reported bug. Instructions how to find the log files are listed below.
+        Attaching log files is required for every reported bug. See instructions below on how to find them.
 
         If the game has not yet been closed since you found the bug:
           1. Head on to game settings and click on "Open osu! folder"
           2. Then open the `logs` folder located there
 
-        If the game crashed or has been closed since you found the bug, **do not** restart the game to retrieve the logs as they will reset. You must find them using the file explorer.
+        **Logs are reset when you reopen the game.** If the game crashed or has been closed since you found the bug, retrieve the logs using the file explorer instead.
 
         By default logs can be found in:
-          - `%AppData%/osu/logs` *(on Windows),*
-          - `~/.local/share/osu/logs` *(on Linux & macOS).*
-          - `Android/data/sh.ppy.osulazer/files/logs` *(on Android)*,
+          - `%AppData%/osu/logs` *(on Windows)*
+          - `~/.local/share/osu/logs` *(on Linux & macOS)*
+          - `Android/data/sh.ppy.osulazer/files/logs` *(on Android)*
           - on iOS they can be obtained by connecting your device to your desktop and copying the `logs` directory from the app's own document storage using iTunes. (https://support.apple.com/en-us/HT201301#copy-to-computer)
 
-        However, if you have selected a custom location for the game files via settings, you must find that custom folder and open the `logs` folder there.
+        If you have selected a custom location for the game files, you can find the `logs` folder there.
 
         After locating the `logs` folder, select all log files inside and drag them into the "Logs" box below.
 
