--- a/.github/ISSUE_TEMPLATE/bug-issue.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue.yml
@@ -25,7 +25,7 @@ body:
   - type: textarea
     attributes:
       label: Bug description
-      description: What are the steps for reproducing the bug? Any additional details that might be of help?
+      description: How did you find the bug? Any additional details that might help?
     validations:
       required: true
   - type: textarea
