Remove warningaserror for Android. It's not clear how to resolve the Fody warnings now.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
         run: dotnet workload install android
 
       - name: Compile
-        run: dotnet build -c Debug -warnaserror osu.Android.slnf
+        run: dotnet build -c Debug osu.Android.slnf
 
   build-only-ios:
     name: Build only (iOS)
