--- a/.github/ISSUE_TEMPLATE/bug-issue.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue.yml
@@ -48,19 +48,27 @@ body:
 
         Attaching log files is required for every reported bug. See instructions below on how to find them.
 
+        **Logs are reset when you reopen the game.** If the game crashed or has been closed since you found the bug, retrieve the logs using the file explorer instead.
+
+        ### Desktop platforms
+
         If the game has not yet been closed since you found the bug:
           1. Head on to game settings and click on "Open osu! folder"
           2. Then open the `logs` folder located there
 
-        **Logs are reset when you reopen the game.** If the game crashed or has been closed since you found the bug, retrieve the logs using the file explorer instead.
-
-        The default places to find the logs are as follows:
+        The default places to find the logs on desktop platforms are as follows:
           - `%AppData%/osu/logs` *on Windows*
           - `~/.local/share/osu/logs` *on Linux & macOS*
+
+        If you have selected a custom location for the game files, you can find the `logs` folder there.
+
+        ### Mobile platforms
+
+        The places to find the logs on mobile platforms are as follows:
           - `Android/data/sh.ppy.osulazer/files/logs` *on Android*
           - *On iOS*, they can be obtained by connecting your device to your desktop and copying the `logs` directory from the app's own document storage using iTunes. (https://support.apple.com/en-us/HT201301#copy-to-computer)
 
-        If you have selected a custom location for the game files, you can find the `logs` folder there.
+        ---
 
         After locating the `logs` folder, select all log files inside and drag them into the "Logs" box below.
 
