Reword log retrieval steps on mobile platforms
Co-authored-by: Dean Herbert <pe@ppy.sh>

--- a/.github/ISSUE_TEMPLATE/bug-issue.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue.yml
@@ -65,8 +65,8 @@ body:
         ### Mobile platforms
 
         The places to find the logs on mobile platforms are as follows:
-          - `Android/data/sh.ppy.osulazer/files/logs` *on Android*
-          - *On iOS*, they can be obtained by connecting your device to your desktop and copying the `logs` directory from the app's own document storage using iTunes. (https://support.apple.com/en-us/HT201301#copy-to-computer)
+          - *On Android*, navigate to `Android/data/sh.ppy.osulazer/files/logs` using a file browser app.
+          - *On iOS*, connect your device to a PC and copy the `logs` directory from the app's document storage using iTunes. (https://support.apple.com/en-us/HT201301#copy-to-computer)
 
         ---
 
