--- a/osu.Android.props
+++ b/osu.Android.props
@@ -13,5 +13,7 @@
   <ItemGroup Label="Transitive Dependencies">
     <!-- Realm needs to be directly referenced in all Xamarin projects, as it will not pull in its transitive dependencies otherwise. -->
     <PackageReference Include="Realm" Version="10.10.0" />
+    <!-- SQLite fails to load without this package. -->
+    <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.0.7" />
   </ItemGroup>
 </Project>
