--- a/osu.Android.props
+++ b/osu.Android.props
@@ -16,6 +16,10 @@
     <!-- SQLite fails to load without this package. -->
     <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.0.7" />
   </ItemGroup>
+  <ItemGroup Label="ILLink">
+    <TrimmerRootDescriptor Include="$(MSBuildThisFileDirectory)ILLink.Descriptors.Android.xml" />
+    <None Include="@(TrimmerRootDescriptor)" />
+  </ItemGroup>
   <PropertyGroup>
     <!-- Fody does not handle Android build well, and warns when unchanged.
          Since Realm objects are not declared directly in Android projects, simply disable Fody. -->
